--- a/previaApp/package.json
+++ b/previaApp/package.json
@@ -32,6 +32,7 @@
     "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-react": "^7.19.0",
     "jest": "24.9.0",
+    "lodash": "^4.17.15",
     "metro-react-native-babel-preset": "0.56.4",
     "react-test-renderer": "16.9.0"
   },
