--- a/previaApp/package.json
+++ b/previaApp/package.json
@@ -34,6 +34,7 @@
     "jest": "24.9.0",
     "lodash": "^4.17.15",
     "metro-react-native-babel-preset": "0.56.4",
+    "react-native-keyboard-aware-scroll-view": "^0.9.1",
     "react-test-renderer": "16.9.0"
   },
   "jest": {
